Make sure hostName match any hostname to avoid having to modifing this value when installing and setting up.

--- a/src/scripts/Serialization/App_Config/Include/AvenueClothing.Sites.config
+++ b/src/scripts/Serialization/App_Config/Include/AvenueClothing.Sites.config
@@ -4,7 +4,7 @@
       <site patch:before="*[@name='website']" 
 						name="avenueclothing" 
 						enableTracking="true" 
-						hostName="sc8" 
+						hostName="*" 
 						virtualFolder="/" 
 						physicalFolder="/" 
 						rootPath="/sitecore/content" 
