--- a/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
@@ -274,9 +274,9 @@
       <Project>{F2BAB86C-44DB-446C-A995-03A33C98855D}</Project>
       <Name>AvenueClothing.Foundation.MvcExtensions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AvenueClothing.Project.Transaction\AvenueClothing.Project.Transaction.csproj">
+    <ProjectReference Include="..\AvenueClothing.Project.Transaction\AvenueClothing.Feature.Transaction.csproj">
       <Project>{267ea69c-3f72-4f2c-b46e-ca229d71546f}</Project>
-      <Name>AvenueClothing.Project.Transaction</Name>
+      <Name>AvenueClothing.Feature.Transaction</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
