--- a/src/AvenueClothing.Tests/AvenueClothing.Tests.csproj
+++ b/src/AvenueClothing.Tests/AvenueClothing.Tests.csproj
@@ -149,13 +149,13 @@
       <Project>{F2BAB86C-44DB-446C-A995-03A33C98855D}</Project>
       <Name>AvenueClothing.Foundation.MvcExtensions</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AvenueClothing.Project.Catalog\AvenueClothing.Project.Catalog.csproj">
+    <ProjectReference Include="..\AvenueClothing.Project.Catalog\AvenueClothing.Feature.Catalog.csproj">
       <Project>{5C0E229B-F2C2-4A8B-B5EE-B936BA3EFAC2}</Project>
-      <Name>AvenueClothing.Project.Catalog</Name>
+      <Name>AvenueClothing.Feature.Catalog</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AvenueClothing.Project.Transaction\AvenueClothing.Project.Transaction.csproj">
+    <ProjectReference Include="..\AvenueClothing.Project.Transaction\AvenueClothing.Feature.Transaction.csproj">
       <Project>{267ea69c-3f72-4f2c-b46e-ca229d71546f}</Project>
-      <Name>AvenueClothing.Project.Transaction</Name>
+      <Name>AvenueClothing.Feature.Transaction</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
