--- a/src/AvenueClothing.Project.Tests/AvenueClothing.Feature.Tests.csproj
+++ b/src/AvenueClothing.Project.Tests/AvenueClothing.Feature.Tests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{1D685E2A-96DE-48B0-913A-1FEA7F0B4609}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AvenueClothing.Tests</RootNamespace>
-    <AssemblyName>AvenueClothing.Tests</AssemblyName>
+    <RootNamespace>AvenueClothing.Feature.Tests</RootNamespace>
+    <AssemblyName>AvenueClothing.Feature.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>682a549b</NuGetPackageImportStamp>
