--- a/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
+++ b/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
@@ -154,7 +154,9 @@
     <Compile Include="Controllers\ConfirmationEmailController.cs" />
     <Compile Include="Controllers\VoucherController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ICurrencyFormatingService.cs" />
     <Compile Include="Services\IMiniBasketService.cs" />
+    <Compile Include="Services\Impl\CurrencyFormattingService.cs" />
     <Compile Include="Services\Impl\MiniBasketService.cs" />
     <Compile Include="ViewModels\AddressSaveViewModel.cs" />
     <Compile Include="ViewModels\BasketUpdateBasket.cs" />
@@ -238,9 +240,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\QuantityPicker\Rendering.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\CommerceConnectBasket\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\CommerceConnectShippingPicker\Rendering.cshtml" />
