--- a/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
+++ b/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
@@ -16,6 +16,7 @@
             <value>${AvenueClothing.InstallationPipeline.ClearSitecoreCache}</value>
             <value>${AvenueClothing.InstallationPipeline.PublishMasterDatabase}</value>
             <value>${AvenueClothing.InstallationPipeline.MoveSitecoreConfigurationFiles}</value>
+            <value>${AvenueClothing.InstallationPipeline.AddClientDependencyBundlesToIgnoreUrlPrefixes}</value>
             <value>${AvenueClothing.InstallationPipeline.RenameWebConfigIfMissing}</value>
           </array>
         </tasks>
@@ -64,5 +65,8 @@
        service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.RenameWebConfigIfMissingTask, AvenueClothing.Installer" />
 
+    <component id="AvenueClothing.InstallationPipeline.AddClientDependencyBundlesToIgnoreUrlPrefixes"
+               service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+               type="AvenueClothing.Installer.Pipelines.Installation.Tasks.AddClientDependencyBundlesToIgnoreUrlPrefixesTask, AvenueClothing.Installer" />
   </components>
 </configuration>
